--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -1,30 +1,34 @@
+h1,
+h2,
+h3,
+h4,
+p,
+li {
+  font-family: sans-serif;
+}
+
 h1 {
   font-size: 26px;
-  font-family: sans-serif;
   text-transform: uppercase;
   font-style: italic;
 }
 
 h2 {
   font-size: 40px;
-  font-family: sans-serif;
 }
 
 h3 {
   font-size: 30px;
-  font-family: sans-serif;
 }
 
 h4 {
   font-size: 20px;
-  font-family: sans-serif;
   text-transform: uppercase;
   text-align: center;
 }
 
 p {
   font-size: 22px;
-  font-family: sans-serif;
   /* 単位なしで指定することでfont-sizeに対する倍率 */
   line-height: 1.5;
 }
@@ -32,5 +36,14 @@ p {
 li {
   /* browserのdefault font-sizeは16px */
   font-size: 20px;
-  font-family: sans-serif;
+}
+
+/* descendant selector, 子孫 */
+footer p {
+  font-size: 16px;
+}
+
+/* htmlの構造に依存してしまうためbetterな書き方ではない */
+article header p {
+  font-style: italic;
 }
