--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -39,11 +39,33 @@ li {
 }
 
 /* descendant selector, 子孫 */
-footer p {
+/* footer p {
+  font-size: 16px;
+} */
+
+/* htmlの構造に依存してしまうためbetterな書き方ではない */
+/* article header p {
+  font-style: italic;
+} */
+
+#author {
+  font-style: italic;
+  font-size: 18px;
+}
+
+#copyright {
   font-size: 16px;
 }
 
-/* htmlの構造に依存してしまうためbetterな書き方ではない */
-article header p {
-  font-style: italic;
+.related-author {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* ul {
+  list-style: none;
+} */
+
+.related {
+  list-style: none;
 }
