--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -145,3 +145,21 @@ a:active {
   background-color: black;
   font-style: italic;
 }
+
+/* Resolving conflicts, 優先順位高い順 */
+/* !important -> inline -> id -> class, pseudo class(., :) -> element, pseudo element(::) -> * -> inherited styles */
+/* #copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green !important;
+} */
