--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -1,6 +1,9 @@
 /* *はinheritが働かないのでinheritされないpropertyを指定するとよい。 */
 * {
   /* border-top: 10px solid #1098ad; */
+  /* 全要素がdefaultのmargin, paddingがあるとstylingが困難なのでreset */
+  margin: 0;
+  padding: 0;
 }
 
 /* bodyは、inheritが働くのでinheritされるpropertyを指定するとよい。 */
@@ -10,6 +13,38 @@ body {
   font-family: sans-serif;
   /* margin, padding, border系はinheritされない */
   border-top: 10px solid #1098ad;
+}
+
+/* chromeのdevtoolsでは青がcontent, 緑がpadding, 赤がmargin */
+.main-header {
+  background-color: #f7f7f7;
+  /* padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px; */
+  padding: 20px 40px;
+  /* verticalなmarginを作る時は、topかbottomかで統一すること。bottomが直感的でわかりやすい */
+  margin-bottom: 60px;
+}
+
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  /* padding-top: 50px;
+  padding-bottom: 50px; */
+  padding: 50px 0;
 }
 
 h1,
@@ -27,10 +62,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -43,11 +81,23 @@ p {
   font-size: 22px;
   /* 単位なしで指定することでfont-sizeに対する倍率 */
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   /* browserのdefault font-sizeは16px */
   font-size: 20px;
+  margin-bottom: 10px;
+}
+
+li:last-child {
+  margin-bottom: 0;
 }
 
 /* descendant selector, 子孫 */
@@ -80,16 +130,6 @@ li {
 
 .related {
   list-style: none;
-}
-
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-top: 5px solid #1098ad;
-  border-bottom: 5px solid #1098ad;
 }
 
 /* page全体の背景色 */
@@ -173,7 +213,3 @@ footer p {
 nav p {
   font-size: 18px;
 } */
-
-nav {
-  font-size: 18px;
-}
