--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -15,6 +15,13 @@ body {
   border-top: 10px solid #1098ad;
 }
 
+/* block要素のcenteringには親要素が幅を持っていることが必須なのでpage全体にwidthを持たせる */
+.container {
+  width: 700px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+}
 /* chromeのdevtoolsでは青がcontent, 緑がpadding, 赤がmargin */
 .main-header {
   background-color: #f7f7f7;
