--- a/03-CSS-Fundamentals/challenge.css
+++ b/03-CSS-Fundamentals/challenge.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.4;
@@ -6,6 +11,8 @@ body {
 /* PRODUCT */
 .product {
   border: 4px solid black;
+  width: 825px;
+  margin: 50px auto;
 }
 
 .product-title {
@@ -13,6 +20,7 @@ body {
   font-size: 22px;
   text-transform: uppercase;
   background-color: #f7f7f7;
+  padding: 15px;
 }
 
 /* PRODUCT INFORMATION */
@@ -25,11 +33,14 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   color: #777;
+  margin-bottom: 20px;
 }
 
 .more-info:link,
 .more-info:visited {
   color: black;
+  /* inline要素にはmargin, paddingが効かないのでこの下の.details-titleにmargin-topを効かせる */
+  /* margin-bottom: 30px; */
 }
 
 .mroe-info:hover,
@@ -41,10 +52,17 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-bottom: 15px;
+  margin-top: 30px;
 }
 
 .details-list {
   list-style: square;
+  margin-left: 20px;
+}
+
+.details-list li {
+  margin-bottom: 10px;
 }
 
 /* BUTTON */
@@ -55,6 +73,9 @@ body {
   font-size: 20px;
   text-transform: uppercase;
   cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  border-top: 4px solid black;
 }
 
 .add-cart:hover {
