--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -14,6 +14,7 @@ body {
   font-family: sans-serif;
   /* margin, padding, border系はinheritされない */
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 /* block要素のcenteringには親要素が幅を持っていることが必須なのでpage全体にwidthを持たせる */
@@ -22,6 +23,7 @@ body {
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
+  /* position: relative; */
 }
 /* chromeのdevtoolsでは青がcontent, 緑がpadding, 赤がmargin */
 .main-header {
@@ -46,6 +48,7 @@ article {
 
 .post-header {
   margin-bottom: 40px;
+  /* position: relative; */
 }
 
 aside {
@@ -225,6 +228,20 @@ nav a:link {
 /* pseudo classはchain可 */
 nav a:link:last-child {
   margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  /* 親要素へposition指定がない時は、viewportに対してのpositionになる */
+  /* 最初にposition:relativeに指定された先祖が基準になる、今回はbody */
+  position: absolute;
+  /* top: 50px;
+  left: 50px; */
+  bottom: 50px;
+  right: 50px;
 }
 
 /* Resolving conflicts, 優先順位高い順 */
