--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -244,6 +244,40 @@ button {
   right: 50px;
 }
 
+/* :: pseudo element, 疑似要素 */
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+/* adjacent sibling, 隣接selector */
+h3 + p::first-line {
+  color: red;
+}
+
+h2 {
+  /* background-color: orangered; */
+  position: relative;
+}
+
+/* before: selectされた要素の最初の小要素として追加 */
+/* after: selectされた要素位最後の小要素として追加 */
+/* 子要素にposition: absoluteを指定しているのでbeforeでもafterでも一緒 */
+h2::before {
+  /* 必須 */
+  content: 'TOP';
+  background-color: #ffe70e;
+  color: #444;
+  font-size: 16px;
+  font-weight: bold;
+  /* pseudo elementはinline elementなので、width, height, padding, margin等の効くbox modelにしたい時は、diplay: block, inline-blockに指定する必要あり  */
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -25px;
+}
+
 /* Resolving conflicts, 優先順位高い順 */
 /* !important -> inline -> id -> class, pseudo class(., :) -> element, pseudo element(::) -> * -> inherited styles */
 /* #copyright {
