--- a/03-CSS-Fundamentals/challenge.css
+++ b/03-CSS-Fundamentals/challenge.css
@@ -13,6 +13,7 @@ body {
   border: 4px solid black;
   width: 825px;
   margin: 50px auto;
+  position: relative;
 }
 
 .product-title {
@@ -36,16 +37,64 @@ body {
   margin-bottom: 20px;
 }
 
+.sale {
+  background-color: #ec2f2f;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+  /* 水平方向のpaddingは垂直方向の2倍だときれいに見えることが多い */
+  padding: 7px 15px;
+  display: inline-block;
+  /* width: 40px;
+  text-align: center; */
+  position: absolute;
+  top: -17px;
+  left: -38px;
+}
+
 .more-info:link,
 .more-info:visited {
   color: black;
   /* inline要素にはmargin, paddingが効かないのでこの下の.details-titleにmargin-topを効かせる */
   /* margin-bottom: 30px; */
+  /* block, inline-block elementにすることで垂直方向のpadding, marginが効くようになる */
+  display: inline-block;
+  margin-bottom: 30px;
 }
 
 .mroe-info:hover,
 .more-info:active {
   text-decoration: none;
+}
+
+.color {
+  background-color: #000;
+  width: 22px;
+  height: 22px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.color-blue {
+  background-color: #2f6ee2;
+}
+
+.color-red {
+  background-color: #ec2f2f;
+}
+
+.color-yellow {
+  background-color: #f0bf1e;
+}
+
+.color-green {
+  background-color: #90cc20;
+}
+
+.color-brown {
+  background-color: #885214;
 }
 
 /* PRODUCT DETAILS */
