--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -19,7 +19,7 @@ body {
 
 /* block要素のcenteringには親要素が幅を持っていることが必須なのでpage全体にwidthを持たせる */
 .container {
-  width: 700px;
+  width: 1200px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -28,7 +28,6 @@ body {
 /* chromeのdevtoolsでは青がcontent, 緑がpadding, 赤がmargin */
 .main-header {
   background-color: #f7f7f7;
-  background-color: red;
   /* padding: 20px;
   padding-left: 40px;
   padding-right: 40px; */
@@ -335,4 +334,19 @@ nav {
   content: '';
   /* clearはblock level elementにしか効かないのでblockかinline-blockに指定 */
   display: block;
+}
+
+article {
+  width: 825px;
+  float: left;
+}
+
+aside {
+  width: 300px;
+  float: right;
+}
+
+/* clearfix用要素がすでにあるので空の要素として作らなくても良い */
+footer {
+  clear: both;
 }
