--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -4,6 +4,8 @@
   /* 全要素がdefaultのmargin, paddingがあるとstylingが困難なのでreset */
   margin: 0;
   padding: 0;
+  /* inheritされない要素なので */
+  box-sizing: border-box;
 }
 
 /* PAGE SECTIONS */
@@ -57,8 +59,7 @@ aside {
   border-bottom: 5px solid #1098ad;
   /* padding-top: 50px;
   padding-bottom: 50px; */
-  padding: 50px 0;
-  width: 500px;
+  padding: 50px 40px;
 }
 
 /* SMALLER ELEMENTS */
@@ -90,6 +91,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 p {
@@ -146,6 +148,7 @@ li:last-child {
 
 .related {
   list-style: none;
+  margin-left: 0;
 }
 
 /* page全体の背景色 */
