--- a/04-CSS-Layouts/challenge.css
+++ b/04-CSS-Layouts/challenge.css
@@ -1,11 +1,28 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: sans-serif;
   line-height: 1.4;
+}
+
+/* imgもinline elementなので、clearfixしてfloatした中身の高さを出しておく */
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.container {
+  /* background-color: red; */
+}
+
+.product-img {
+  float: left;
+  margin-right: 40px;
 }
 
 /* PRODUCT */
@@ -25,8 +42,18 @@ body {
 }
 
 /* PRODUCT INFORMATION */
+.product-info {
+  /* .product's width - .product's border * 2 - image's width - middle margin / 2 columns */
+  /* (825-4*2-250-40*2)/2 = 243.5 */
+  width: 243px;
+  float: left;
+  margin-right: 40px;
+  margin-top: 20px;
+}
+
 .price {
   font-size: 24px;
+  float: left;
 }
 
 .shipping {
@@ -35,6 +62,8 @@ body {
   font-weight: bold;
   color: #777;
   margin-bottom: 20px;
+  float: right;
+  margin-top: 8px;
 }
 
 .sale {
@@ -52,6 +81,11 @@ body {
   position: absolute;
   top: -17px;
   left: -38px;
+}
+
+.product-description {
+  clear: both;
+  margin-bottom: 10px;
 }
 
 .more-info:link,
@@ -98,11 +132,16 @@ body {
 }
 
 /* PRODUCT DETAILS */
+.product-details {
+  width: 243px;
+  float: left;
+  margin-top: 20px;
+}
+
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
   margin-bottom: 15px;
-  margin-top: 30px;
 }
 
 .details-list {
